--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -41,7 +41,7 @@ jobs:
           - service: MongoDB
             uri: mongodb://localhost:27017/
           - service: MongoDB with TLS
-            uri: mongodb://localhost:37017/?tls=true&tlsCertificateKeyFile=../.dev/build/certs/client.pem&tlsCaFile=../.dev/build/certs/rootCA-cert.pem
+            uri: mongodb://localhost:37017/?tls=true&tlsCaFile=../.dev/build/certs/rootCA-cert.pem
           - service: FerretDB
             uri: mongodb://localhost:27018/
 
