--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -90,7 +90,7 @@ tasks:
     desc: "Run all tests for all services"
     cmds:
       - env MONGODB_URI=mongodb://localhost:27017/ go test -race -count=1 ./...
-      - env MONGODB_URI='mongodb://localhost:37017/?tls=true&tlsCertificateKeyFile=../.dev/build/certs/client.pem&tlsCaFile=../.dev/build/certs/rootCA-cert.pem' go test -race -count=1 ./...
+      - env MONGODB_URI='mongodb://localhost:37017/?tls=true&tlsCaFile=../.dev/build/certs/rootCA-cert.pem' go test -race -count=1 ./...
       - env MONGODB_URI=mongodb://localhost:27018/ go test -race -count=1 ./...
 
   bench:
