--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -90,6 +90,8 @@ tasks:
     desc: "Run all tests for all services"
     cmds:
       - env MONGODB_URI=mongodb://localhost:27017/ go test -race -count=1 ./...
+      # tlsCaFile path is relative to wireclient package
+      - env MONGODB_URI='mongodb://localhost:37017/?tls=true&tlsCaFile=../.dev/build/certs/rootCA-cert.pem' go test -race -count=1 ./...
       - env MONGODB_URI=mongodb://localhost:27018/ go test -race -count=1 ./...
 
   bench:
