--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -46,6 +46,7 @@ jobs:
             uri: mongodb://localhost:27018/
           - service: FerretDB v1
             uri: mongodb://localhost:27019/
+            ferretdbv1: true
 
     permissions:
       contents: read
@@ -80,7 +81,7 @@ jobs:
         run: bin/task test
         env:
           MONGODB_URI: ${{ matrix.uri }}
-          TEST_FLAGS: ${{ matrix.service == 'FerretDB v1' && '-ferretdbv1' || '' }}
+          WIRE_FERRETDBV1: ${{ matrix.ferretdbv1 }}
 
       - name: Get logs
         if: always()
