--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -46,7 +46,7 @@ jobs:
             uri: mongodb://localhost:27018/
           - service: FerretDB v1
             uri: mongodb://localhost:27019/
-            ferretdbv1: true
+            flags: -ferretdbv1
 
     permissions:
       contents: read
@@ -81,7 +81,7 @@ jobs:
         run: bin/task test
         env:
           MONGODB_URI: ${{ matrix.uri }}
-          WIRE_FERRETDBV1: ${{ matrix.ferretdbv1 }}
+          TEST_FLAGS: ${{ matrix.ferretdbv1 }}
 
       - name: Get logs
         if: always()
