--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -38,6 +38,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          # keep in sync with Taskfile.yml
           - service: MongoDB
             uri: mongodb://localhost:27017/
           - service: MongoDB with TLS
