--- a/.dev/docker-compose.yml
+++ b/.dev/docker-compose.yml
@@ -2,8 +2,8 @@
 services:
   devcontainer:
     build:
-      context: .
-      dockerfile: golang.Dockerfile
+      context: ..
+      dockerfile: .dev/devcontainer.Dockerfile
     volumes:
       - ..:/workspace
     extra_hosts:
