--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -44,9 +44,9 @@ jobs:
             uri: mongodb://localhost:37017/?tls=true&tlsCaFile=../.dev/build/certs/rootCA-cert.pem
           - service: FerretDB v2
             uri: mongodb://localhost:27018/
-          # TODO https://github.com/FerretDB/wire/issues/127
           - service: FerretDB v1
             uri: mongodb://localhost:27019/
+            flags: -ferretdbv1
 
     permissions:
       contents: read
@@ -81,6 +81,7 @@ jobs:
         run: bin/task test
         env:
           MONGODB_URI: ${{ matrix.uri }}
+          TEST_FLAGS: ${{ matrix.flags }}
 
       - name: Get logs
         if: always()
