--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -84,7 +84,7 @@ tasks:
   test:
     desc: "Run all tests (requires MONGODB_URI set)"
     cmds:
-      - go test -race -count=1 -coverpkg=./... -coverprofile=cover.txt ./...
+      - go test -race -count=1 -coverpkg=./... -coverprofile=cover.txt ./... {{.TEST_FLAGS}}
 
   test-all:
     desc: "Run all tests for all services"
@@ -93,8 +93,7 @@ tasks:
       # tlsCaFile path is relative to wireclient package
       - env MONGODB_URI='mongodb://localhost:37017/?tls=true&tlsCaFile=../.dev/build/certs/rootCA-cert.pem' go test -race -count=1 ./...
       - env MONGODB_URI=mongodb://localhost:27018/ go test -race -count=1 ./...
-      # TODO https://github.com/FerretDB/wire/issues/127
-      - env MONGODB_URI=mongodb://localhost:27019/ go test -race -count=1 ./...
+      - env MONGODB_URI=mongodb://localhost:27019/ go test -race -count=1 ./... -ferretdbv1
 
   bench:
     desc: "Run benchmarks"
