--- a/.dev/docker-compose.yml
+++ b/.dev/docker-compose.yml
@@ -1,5 +1,16 @@
 ---
 services:
+  devcontainer:
+    build:
+      context: ..
+      dockerfile: .dev/devcontainer.Dockerfile
+    volumes:
+      - ..:/workspace
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    environment:
+      HOST: "host.docker.internal"
+
   mongodb:
     build:
       context: .
