--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -93,7 +93,7 @@ tasks:
     cmds:
       - env MONGODB_URI=mongodb://{{.HOST}}:27017/ go test -race -count=1 ./...
       # tlsCaFile path is relative to wireclient package
-      - env MONGODB_URI='mongodb://{{.HOST}}:37017/?tls=true&tlsCaFile=../.dev/build/certs/rootCA-cert.pem' go test -race -count=1 ./...
+      - env MONGODB_URI='mongodb://username:password@{{.HOST}}:37017/?authMechanism=SCRAM-SHA-256&tls=true&tlsCaFile=../.dev/build/certs/rootCA-cert.pem' go test -race -count=1 ./...
       - env MONGODB_URI=mongodb://{{.HOST}}:27018/ go test -race -count=1 ./...
       - env MONGODB_URI=mongodb://{{.HOST}}:27019/ go test -race -count=1 ./... -ferretdbv1
 
