--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -42,7 +42,7 @@ jobs:
           - service: MongoDB
             uri: mongodb://localhost:27017/
           - service: MongoDB with TLS
-            uri: mongodb://localhost:37017/?tls=true&tlsCaFile=../.dev/build/certs/rootCA-cert.pem
+            uri: mongodb://localhost:37017/?authMechanism=SCRAM-SHA-256&tls=true&tlsCaFile=../.dev/build/certs/rootCA-cert.pem
           - service: FerretDB v2
             uri: mongodb://localhost:27018/
           - service: FerretDB v1
