--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -6,7 +6,7 @@ env:
   GOCOVERDIR: tmp/cover
 
 vars:
-  HOST: '{{env "HOST" | default "localhost"}}'
+  HOST: '{{env "HOST" | default "127.0.0.1"}}'
   BENCH: Benchmark.*
   BENCH_TIME: 1s
   BENCH_COUNT: 5
@@ -88,14 +88,21 @@ tasks:
       - go test -race -count=1 -coverpkg=./... -coverprofile=cover.txt ./... {{.TEST_FLAGS}}
 
   test-all:
-    # keep in sync with CI config
+    # keep in sync with CI's go.yml
     desc: "Run all tests for all services"
     cmds:
-      - env MONGODB_URI=mongodb://{{.HOST}}:27017/ go test -race -count=1 ./...
-      # tlsCaFile path is relative to wireclient package
-      - env MONGODB_URI='mongodb://{{.HOST}}:37017/?tls=true&tlsCaFile=../.dev/build/certs/rootCA-cert.pem' go test -race -count=1 ./...
-      - env MONGODB_URI=mongodb://{{.HOST}}:27018/ go test -race -count=1 ./...
-      - env MONGODB_URI=mongodb://{{.HOST}}:27019/ go test -race -count=1 ./... -ferretdbv1
+      - >
+        env MONGODB_URI='mongodb://username:password@{{.HOST}}:27017/invalid?authSource=admin&authMechanism=SCRAM-SHA-256'
+        go test -race -count=1 ./...
+      - >
+        env MONGODB_URI='mongodb://username:password@{{.HOST}}:37017/admin?tls=true&tlsCaFile=../.dev/build/certs/rootCA-cert.pem'
+        go test -race -count=1 ./...
+      - >
+        env MONGODB_URI='mongodb://username:password@{{.HOST}}:27018/'
+        go test -race -count=1 ./...
+      - >
+        env MONGODB_URI='mongodb://username:password@{{.HOST}}:27019/?authMechanism=PLAIN'
+        go test -race -count=1 ./... -ferretdbv1
 
   bench:
     desc: "Run benchmarks"
